# npm-init-analog

./: .gitignore  Cargo.toml  README.md
src/: main.rs
