[package]
name = "npm-init-analog"
version = "1.0.0"
authors = ["smolovk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
dialoguer = "0.10.0"
serde = { version="1.0.136", features = ["derive"] }
serde_json = "1.0.79"