[package]
name = "npm-init-analog"
version = "1.0.0"
authors = ["smolovk"]
description = "NPM init analog script"
repository = "https://github.com/smolovk/npm-init-analog"
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
dialoguer = "0.10.0"
console = "0.15.0"
serde = { version="1.0.136", features = ["derive"] }
serde_json = "1.0.79"
